# obsidian

./: Cargo.toml
assets/built/: browser.js  browser_bg.wasm  built.css  santoka-haiku-2023-06_26.json
assets/macro/: tailwind.config.js
assets/macro/src/: parse_macro_arguments.rs
assets/macro/src/images/: build_time_image.rs  build_time_resized_image.rs  dynamic_image_extension.rs  image_asset_extension.rs
assets/runtime/: Cargo.toml
assets/runtime/src/: image_asset.rs  lib.rs
browser/: Cargo.toml
browser/src/: lib.rs
library_of_babel/: Cargo.toml
library_of_babel/src/: date.rs  lib.rs
library_of_babel/src/extensions/: mod.rs  vec.rs
library_of_babel/src/leaflet/: document.rs  line.rs  metadata.rs  mod.rs  normalized_string.rs  paragraph.rs  parse_error.rs  raw_section.rs  schema.rs  section.rs
library_of_babel/src/obsidian/: file.rs  link.rs  link_span.rs  mod.rs  page.rs  reference.rs  reference_span.rs  span.rs  tag.rs  vault.rs  vault_item.rs  wiki_link_string.rs
library_of_babel/src/years/: mod.rs
library_of_babel/src/years/year_2023/: mod.rs  processed_2023_haiku.csv  unprocessed_2023_haiku.csv
library_of_babel/src/years/year_2024/: mod.rs
server/: Cargo.toml
server/src/: main.rs
server/src/assets/: main.css  mod.rs
server/src/assets/processed_2023_haiku/: mod.rs  processed_2023_haiku.csv
server/src/components/: layout.rs  light_dark_image.rs  link.rs  mod.rs
server/src/css_class_groups/: mod.rs
server/src/extensions/: mod.rs  str.rs  vec.rs
server/src/routes/: mod.rs  route.rs
server/src/routes/build_time/: mod.rs
server/src/routes/not_found/: mod.rs
server/src/routes/santoka/: mod.rs
server/src/routes/santoka/non_preview_poems/: mod.rs
server/src/routes/work/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs  route.rs
shared/src/controllers/: mod.rs  parallax.rs  replace.rs  show_hide.rs  show_if_scrolled.rs
shared/src/extensions/: mod.rs
shared/src/extensions/browser/: document.rs  dom_token_list.rs  element.rs  mod.rs  vec_html_element.rs
shared/src/santoka_haiku_2023_06_26/: mod.rs
src/: date.rs  file.rs  lib.rs  main.rs  vault.rs  vault_item.rs
src/obsidian/: file.rs  mod.rs  page.rs  reference.rs  vault.rs  vault_item.rs
